--- a/css/style.css
+++ b/css/style.css
@@ -15,15 +15,21 @@ body {
     background-color: #f9f9f9;
 }
 .desktop {
-    width: 1920px;
     margin: 0 auto;
     text-align: center;
-
+}
+.blok__fs {
+    width: 100%;
+    background: #EEEFF1;
+}
+.blok__fs__content {
+    width: 1110px;
+    margin: 0 auto;
+    text-align: left;
+    
 }
 .first__screen {
-    background: #EEEFF1;
-    padding: 80px 400px 140px;
-    text-align: left;
+    padding: 80px 0 140px;
     margin-bottom: 112px;
 }
 .nav {
@@ -61,6 +67,7 @@ body {
     margin: 0;
 }
 .hdr__btn {
+    display: block;
     width: 225px;
     margin-top: 65px;
     background: #34547A;
@@ -80,10 +87,8 @@ body {
     font-weight: 500;
     font-size: 32px;
     line-height: 38px;
-    text-align: center;
     color: #000;
     margin: 0;
-
 }
 .sbttl {
     font-size: 16px;
@@ -91,9 +96,17 @@ body {
     color: #727272;
     margin: 50px 0 100px;
 }
-.numbers {
+.blok__numbers {
+    width: 100%;
     background: #34547A;
-    padding: 100px 409px;
+}
+.blok__numbers__content {
+    width: 1110px;
+    margin: 0 auto;
+    text-align: left;
+}
+.numbers {
+    padding: 100px 0;
     text-align: left;
     font-size: 0;
 }
@@ -145,11 +158,16 @@ body {
     color: #727272;
 }
 .footer {
-    
+    width: 100%;
+    background: #34547A;    
 }
 .footer__block {
-    padding: 50px 406px;
-    background: #34547A;
+    width: 1110px;
+    margin: 0 auto;
+    text-align: left;
+    padding: 50px 0;
+}
+.footer__block__comtent {
     font-size: 0;
     text-align: left;
 }
